objects/student__c.object
<CustomObject>
    <fields>
        <fullName>Attendance__c</fullName>
        <label>Attendance</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Email_Address_del_del_del_del_del_de_del__c</fullName>
        <label>Student Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Sent_to_student_Father__c</fullName>
        <label>Email Sent to student Father</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Leave__c</fullName>
        <label>Leave</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Student_Id__c</fullName>
        <label>Student_Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trail_Field__c</fullName>
        <label>Trail Field</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <label>Student</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Attendance__c</columns>
        <columns>Email_Sent_to_student_Father__c</columns>
        <columns>Leave__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>VR_Student_Emai_Not_Equal_Student_Father</fullName>
        <active>true</active>
        <errorConditionFormula>Email_Address_del_del_del_del_del_de_del__c  == Email_Sent_to_student_Father__c</errorConditionFormula>
        <errorMessage>Please enter different email in your Email and your Father email</errorMessage>
    </validationRules>
</CustomObject>